--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # ignore the file by git
 
 PythonProgram/CoreTutorial/tempCodeRunnerFile.py
-log
+PythonProgram/BasicPracticeProgram/tempCodeRunnerFile.py
+PythonProgram/OopsTutorial/tempCodeRunnerFile.py
 test.md
